# browsing-analysis

./: README.md  docker-compose.yml
chrome-extension/: hello.html  manifest.json  package.json  pnpm-lock.yaml  service-worker.js  service-worker.ts  tsconfig.json
server/: .env.example  .gitignore  Cargo.toml  Dockerfile
server/migrations/: 20240827075725_initial_schema.sql  20240923170753_cluster_table.sql  20240924183310_multiple_cluster_algos.sql  20240924184801_update_cluster_run_id.sql  20240924184838_cluster_fk_to_cluster_run.sql  20240924184947_cluster_assignments_table.sql  20240924185449_cluster_fks.sql  20240924190339_drop_cluster_col_in_page_info.sql  20241011200224_add_page_embedding_table.sql  20241011203143_move_page_info.sql  20241016212256_remove_embedding_run_table.sql  20241016215419_cluster_assignment_switch_page_url_to_page_id.sql  20241017051829_make_page_id_not_null_in_cluster_assignment.sql  20241017185447_change_clustering_run_id_to_clustering_run_name.sql  20241017190015_legacy_clustering_run_name.sql  20241017190837_clustering_run_not_null.sql
server/src/: config.rs  db.rs  embedding.rs  handlers.rs  main.rs  models.rs  routes.rs  services.rs
server/src/db/: browse_event.rs  cluster.rs  page.rs  page_info.rs  preprocessed_page_embedding.rs
server/src/handlers/: analytics_handlers.rs  browse_event_handlers.rs
server/src/models/: browse_event.rs  cluster.rs
server/src/services/: cluster.rs  clustering.rs  page_processing.rs  preprocessing.rs  utils.rs
server/src/services/preprocessing/: pipeline.rs  pipeline_step.rs  pipelines.rs
visualizer/: index.html  package.json  pnpm-lock.yaml
(+10 files in other folders)
