[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
serde = "1.0.208"
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio", "chrono"] }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["cors"] }
