[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.30"
serde = "1.0.208"
sqlx = { version = "0.8.1", features = ["postgres", "runtime-tokio", "chrono"] }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["cors"] }
pgvector = { version = "0.4", features = ["sqlx"] }
fastembed = "4.0.0"
anyhow = "1.0.86"
htmd = "0.1.6"
keyword_extraction = { version = "1.4.3", features = ["yake"] }
stop-words = "0.8.0"
